# vecfunk

./: .gitignore  README.md  vecfunc.cabal  vecfunk.cabal
src/: Main.hs
