name:                vecfunk
version:             0.0.1
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/loobean#readme
license:             MIT
license-file:        LICENSE
author:              Willis Hoke
maintainer:          willishoke@gmail.com
copyright:           2020 Willis Hoke
category:            EDSL
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable loobean
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       algebraic-graphs,
                       vector,
                       lens,
                       mtl
